# kal

./: .gitignore  .python-version  README.md  build.sh  config.json  pyproject.toml
kal/: application.py  config.py  env.py  github.py  initialize.py  storage.py  utils.py
kal/commands/: __init__.py  box.py  clone.py  install.py  note.py  time.py
kal/console/: application.py
kal/console/commands/: clone.py
kal/core/: base_commands.py  json_obj.py
kal/libraries/: github.py  note.py  shell.py  storage.py
kal/utils/: ocel.py
tests/: utils_test.py
