[tool.poetry]
name = "kal"
version = "0.0.1"
description = "Personal assistant cli tool"
authors = ["joyongjin <wnrhd114@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
